Transacción RegistrarMultiple: Transacción para registrar multiples fuentes_financiamiento_apropiacion
Issue #26
